// Make an size-optimized tilemap dto model, based on quadtree

syntax = "proto3";
import "message/Vec2i.proto";
import "message/Tile.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model.world";
option java_outer_classname = "TilemapProto";

message TilemapRpcDto {
  Vec2iRpcDto sizes = 1;
  repeated TileRpcDto tiles = 2;
}
